--- a/include/appendix_Calibration.tex
+++ b/include/appendix_Calibration.tex
@@ -68,117 +68,117 @@
 \end{figure}
 
 
-\section{Application of the calibration to the test-beam data}\label{sec:appendixCalibDataG4}
+% \section{Application of the calibration to the test-beam data}\label{sec:appendixCalibDataG4}
 
 
-\begin{figure}[htbp] \centering
-  \begin{subfigure}[b]{0.32\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0019_G07.pdf}
-    \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.32\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0019_G07.pdf}
-    \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.32\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_G4_W0019_G07.pdf}
-    \caption{}
-  \end{subfigure}
-  \caption{Energy deposition and comparison to
-    \textsc{Geant4}. W0019\_G07, Run 1190, THL=995.}
-  \label{fig:EdepW19L8}
-\end{figure}
+% \begin{figure}[htbp] \centering
+%   \begin{subfigure}[b]{0.32\textwidth}
+%     \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0019_G07.pdf}
+%     \caption{}
+%   \end{subfigure}\hfill
+%   \begin{subfigure}[b]{0.32\textwidth}
+%     \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0019_G07.pdf}
+%     \caption{}
+%   \end{subfigure}\hfill
+%   \begin{subfigure}[b]{0.32\textwidth}
+%     \includegraphics[width=\textwidth]{./figures/Calibration/Edep_G4_W0019_G07.pdf}
+%     \caption{}
+%   \end{subfigure}
+%   \caption{Energy deposition and comparison to
+%     \textsc{Geant4}. W0019\_G07, Run 1190, THL=995.}
+%   \label{fig:EdepW19L8}
+% \end{figure}
 
 
-\begin{figure}[htbp] \centering
-  \begin{subfigure}[b]{0.32\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0019_F07.pdf}
-    \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.32\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0019_F07.pdf}
-    \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.32\textwidth}
-%    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_G4_W0019_L08.pdf}
-    \caption{}
-  \end{subfigure}
-  \caption{Energy deposition and comparison to
-    \textsc{Geant4}. W0019\_L08, Run 1130, THL=1133.}
-  \label{fig:EdepW19L8}
-\end{figure}
+% \begin{figure}[htbp] \centering
+%   \begin{subfigure}[b]{0.32\textwidth}
+%     \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0019_F07.pdf}
+%     \caption{}
+%   \end{subfigure}\hfill
+%   \begin{subfigure}[b]{0.32\textwidth}
+%     \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0019_F07.pdf}
+%     \caption{}
+%   \end{subfigure}\hfill
+%   \begin{subfigure}[b]{0.32\textwidth}
+% %    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_G4_W0019_L08.pdf}
+%     \caption{}
+%   \end{subfigure}
+%   \caption{Energy deposition and comparison to
+%     \textsc{Geant4}. W0019\_L08, Run 1130, THL=1133.}
+%   \label{fig:EdepW19L8}
+% \end{figure}
 
 
-\begin{figure}[htbp] \centering
-  \begin{subfigure}[b]{0.32\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0019_L08.pdf}
-    \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.32\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0019_L08.pdf}
-    \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.32\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_G4_W0019_L08.pdf}
-    \caption{}
-  \end{subfigure}
-  \caption{Energy deposition and comparison to
-    \textsc{Geant4}. W0019\_L08, Run 1130, THL=1133.}
-  \label{fig:EdepW19L8}
-\end{figure}
+% \begin{figure}[htbp] \centering
+%   \begin{subfigure}[b]{0.32\textwidth}
+%     \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0019_L08.pdf}
+%     \caption{}
+%   \end{subfigure}\hfill
+%   \begin{subfigure}[b]{0.32\textwidth}
+%     \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0019_L08.pdf}
+%     \caption{}
+%   \end{subfigure}\hfill
+%   \begin{subfigure}[b]{0.32\textwidth}
+%     \includegraphics[width=\textwidth]{./figures/Calibration/Edep_G4_W0019_L08.pdf}
+%     \caption{}
+%   \end{subfigure}
+%   \caption{Energy deposition and comparison to
+%     \textsc{Geant4}. W0019\_L08, Run 1130, THL=1133.}
+%   \label{fig:EdepW19L8}
+% \end{figure}
 
 
-\begin{figure}[htbp] \centering
-  \begin{subfigure}[b]{0.32\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0019_C07.pdf}
-    \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.32\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0019_C07.pdf}
-    \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.32\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_G4_W0019_C07.pdf}
-    \caption{}
-  \end{subfigure}
-  \caption{Energy deposition and comparison to
-    \textsc{Geant4}. W0019\_C07, Run 902, THL=1148.}
-  \label{fig:EdepW19C7}
-\end{figure}
+% \begin{figure}[htbp] \centering
+%   \begin{subfigure}[b]{0.32\textwidth}
+%     \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0019_C07.pdf}
+%     \caption{}
+%   \end{subfigure}\hfill
+%   \begin{subfigure}[b]{0.32\textwidth}
+%     \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0019_C07.pdf}
+%     \caption{}
+%   \end{subfigure}\hfill
+%   \begin{subfigure}[b]{0.32\textwidth}
+%     \includegraphics[width=\textwidth]{./figures/Calibration/Edep_G4_W0019_C07.pdf}
+%     \caption{}
+%   \end{subfigure}
+%   \caption{Energy deposition and comparison to
+%     \textsc{Geant4}. W0019\_C07, Run 902, THL=1148.}
+%   \label{fig:EdepW19C7}
+% \end{figure}
 
 
-\begin{figure}[htbp] \centering
-  \begin{subfigure}[b]{0.32\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0005_E02.pdf}
-    \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.32\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0005_E02.pdf}
-    \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.32\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_G4_W0005_E02.pdf}
-    \caption{}
-  \end{subfigure}
-  \caption{Energy deposition and comparison to
-    \textsc{Geant4}. W0005\_E02, Run 661, THL=1160.}
-  \label{fig:EdepW5E2}
-\end{figure}
+% \begin{figure}[htbp] \centering
+%   \begin{subfigure}[b]{0.32\textwidth}
+%     \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0005_E02.pdf}
+%     \caption{}
+%   \end{subfigure}\hfill
+%   \begin{subfigure}[b]{0.32\textwidth}
+%     \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0005_E02.pdf}
+%     \caption{}
+%   \end{subfigure}\hfill
+%   \begin{subfigure}[b]{0.32\textwidth}
+%     \includegraphics[width=\textwidth]{./figures/Calibration/Edep_G4_W0005_E02.pdf}
+%     \caption{}
+%   \end{subfigure}
+%   \caption{Energy deposition and comparison to
+%     \textsc{Geant4}. W0005\_E02, Run 661, THL=1160.}
+%   \label{fig:EdepW5E2}
+% \end{figure}
 
-\begin{figure}[htbp] \centering
-  \begin{subfigure}[b]{0.32\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0005_F01.pdf}
-    \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.32\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0005_F01.pdf}
-    \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.32\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_G4_W0005_F01.pdf}
-    \caption{}
-  \end{subfigure}
-  \caption{Energy deposition and comparison to
-    \textsc{Geant4}. W0005\_F01, Run 761, THL=1153.}
-  \label{fig:EdepW5F1}
-\end{figure}
+% \begin{figure}[htbp] \centering
+%   \begin{subfigure}[b]{0.32\textwidth}
+%     \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0005_F01.pdf}
+%     \caption{}
+%   \end{subfigure}\hfill
+%   \begin{subfigure}[b]{0.32\textwidth}
+%     \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0005_F01.pdf}
+%     \caption{}
+%   \end{subfigure}\hfill
+%   \begin{subfigure}[b]{0.32\textwidth}
+%     \includegraphics[width=\textwidth]{./figures/Calibration/Edep_G4_W0005_F01.pdf}
+%     \caption{}
+%   \end{subfigure}
+%   \caption{Energy deposition and comparison to
+%     \textsc{Geant4}. W0005\_F01, Run 761, THL=1153.}
+%   \label{fig:EdepW5F1}
+% \end{figure}
