--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -127,7 +127,8 @@
   include/appendix_Calibration,  
   include/appendix_Telescope,  
   include/appendix_ThinSensors,  
-refs,
+  refs,
+  thesis_acknowledge,
 }
 
 %------------------------------------------------------------------------------
@@ -198,7 +199,7 @@ refs,
 %------------------------------------------------------------------------------
 % You can add your acknowledgements here - don't forget to also add
 % them to \includeonly above
-%\include{thesis_acknowledge}
+\include{thesis_acknowledge}
 
 \tableofcontents
 
