[Conclusion] few updates

--- a/include/Software.tex
+++ b/include/Software.tex
@@ -1,6 +1,6 @@
 % ==============================================================================
 \chapter{Simulation and reconstruction software frameworks}
-\label{sec:Software}
+\label{ch:Software}
 %==============================================================================    
 
 Simulation tools have a crucial role in the development and also
