--- a/include/Conclusions.tex
+++ b/include/Conclusions.tex
@@ -3,3 +3,50 @@
 \label{ch:conclusions}
 %==============================================================================    
 
+This thesis, gives an overview on the CLIC experiment. The accelerator
+is briefly described and the physics potential of the experiment is
+given. The requirements on the CLIC detector are presented with a
+focus of the vertex detector which is the main subject of the work
+presented. An overview of the R\&D on the planar pixelated silicon
+detectors is detailed with laboratory and test-beam
+measurements. \textsc{Geant4}-based and TCAD simulations are performed
+and validated with a comparison to the collected data. In this thesis,
+we span a large set of activities starting from calibration of
+assemblies, to resolution studies of the telescope used to finally
+characterise thin sensors and different options of active-edge
+technology and their impact on the particle detection. A summary of
+these activities is given here below.
+
+\cref{sec:SiliconTheory} gives an introduction to semiconductor
+material with an accent on silicon which is predominant in tracking
+detectors in particle physics experiments. Theoretical concepts are
+introduced. Concepts used later in the thesis for the simulation and
+understanding of the test-beam data are deeply studied. Different
+methods modeling the energy deposition spectrum of high-energy
+particles
+
+\cref{ch:FE_electronics}
+
+\cref{ch:Software}
+
+\cref{ch:Telescope}
+
+\cref{ch:ThinSensorsStudies}
+
+\cref{ch:ActiveEdgeSensors}
+
+\section{Outlook}
+\begin{itemize}
+\item Thin planar sensors reaching their limits: other solutions such
+  as HV-CMOS can be also attractive.
+\item Design of readout ASIC important in terms of noise. Going to
+  lower threshold can help.
+\item Miniaturisation and the limits
+\item Input for realistic digitiser for the CLIC full simulation
+\item Active-edge assemblies: floating guard ring is the best solution
+  (breakdown and detection efficiency) for thin sensors. We see an
+  early breakdown and a large fraction of the deposited charge in the
+  guard ring. A readout more adapted for this option is needed to
+  fully confirm the expectations. Ladders of detectors should be built
+  to fully confirm the assumptions.
+\end{itemize}
