--- a/include/Introduction.tex
+++ b/include/Introduction.tex
@@ -66,7 +66,7 @@ their readout noise is studied. The calibration methods for these
 assemblies are discussed.
 
 The simulation and reconstruction software frameworks are described in
-\cref{sec:Software}. The simulations are later validated with
+\cref{ch:Software}. The simulations are later validated with
 data. The reconstruction frameworks are used for the analysis of both
 simulations and data.
 
